--- a/package.json
+++ b/package.json
@@ -2,10 +2,17 @@
   "name": "nodejspresentation",
   "version": "1.0.0",
   "description": "",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/nicoandra/nodejs-samples.git"
+  },
   "main": "everythingIsAnObject.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC"
+  "author": "Nicolás Andrade <nico@nmac.com.ar>",
+  "license": "ISC",
+  "dependencies": {
+    "request": "^2.81.0"
+  }
 }
